# gca-uqo

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  TODO.md  database.db  makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c77a3f9d736_removed_note_field.py  e1b48089fa6a_initial_migration.py
backend/app/: base_models.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: campagnes.py  candidature.py  cours.py  uqo.py
backend/app/core/: config.py  db.py  diffs.py  file.py  uqo.py
backend/app/schemas/: change.py  enums.py  read.py  requests.py  responses.py
backend/app/tests/: test_diffs.py
backend/scripts/: start.sh
backend/src/: cache.py  config.py  exceptions.py  factory.py  file.py  main.py  models.py  schemas.py
backend/src/core/: db.py  diffs.py  uqo.py
backend/src/dependencies/: activite.py  campagne.py  context.py  cours.py  db_session.py  etudiant.py  groupe.py  http_client.py  session.py
backend/src/handlers/: campagnes.py  candidature.py  cours.py  uqo.py
backend/src/models/: requests.py  responses.py  uqo.py
backend/src/providers/: __init__.py  file.py
backend/src/schemas/: enums.py  requests.py  responses.py  uqo.py
backend/src/scripts/: initial_data.py  stress_test.py
backend/src/services/: __init__.py  campagne.py  candidature.py  cours.py  etudiant.py  groupe.py  uqo_cours.py  uqo_program.py
backend/tests/: conftest.py  stress_test.py  test_diffs.py
backend/tests/handlers/: test_candidature.py  test_uqo.py
backend/tests/scripts/: initial_data.py
(+42 files in other folders)
