[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "httpx>=0.28.1",
    "cachetools>=5.5.2",
    "alembic>=1.16.1",
    "structlog>=25.3.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "locust>=2.37.0",
    "ruff>=0.11.6",
]
